Added responsiveness for smaller screens

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 </a>
                 <a href="#!">
                     <li>
-                        <p>Taylor Otwell</p>
-                        <p>Member</p>
+                        <div>Taylor Otwell</div>
+                        <div>Member</div>
                     </li>
                 </a>
                 <a href="#!">
@@ -48,7 +48,7 @@
             </ul>
             <div class="buttons">
                 <button class="btn" type="button"><a id="first-btn" href="#!">Cancel</a></button>
-                <a href="#!"><button class="btn" id="second-btn" type="button">Invite</button></a>
+                <button class="btn" id="second-btn" type="button">Invite</button>
             </div>
         </div>
     </div>
