Fixed UI names and added little cards

--- a/index.html
+++ b/index.html
@@ -12,43 +12,50 @@
 <body>
     <div class="container">
         <div class="card">
-            <h3>Contacts</h3>
-            <input type="text" id="main" placeholder="Search teams or members">
+            <h1>Weather</h1>
+            <input type="text" id="main" placeholder="Search your city">
             <ul>
-                <a href="#!">
+                <a>
                     <li>
-                        <div>Tighten Co.</div>
-                        <div>Team</div>
+                        <h3 id="city">Wrocław</h3>
                     </li>
                 </a>
-                <a href="#!">
+                <a>
                     <li>
-                        <div>Taylor Otwell</div>
-                        <div>Member</div>
+                        <div class="title">Temperature</div>
+                        <div id="temperature">15 degrees C</div>
                     </li>
                 </a>
-                <a href="#!">
+                <a>
                     <li>
-                        <div>Adam Wathan</div>
-                        <div>Member</div>
+                        <div class="title">FeelsLike</div>
+                        <div id="feelslike">18 degrees C</div>
                     </li>
                 </a>
-                <a href="#!">
+                <a>
                     <li>
-                        <div>Duke Street Studio Inc.</div>
-                        <div>Team</div>
+                        <div class="title">Description</div>
+                        <div id="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur
+                            quaerat culpa
+                            voluptatem repellendus iure! Accusamus pariatur dolore libero autem tempora?</div>
                     </li>
                 </a>
-                <a href="#!">
+                <a>
                     <li>
-                        <div>Jeffrey Way</div>
-                        <div>Member</div>
+                        <div class="title">Wind speed</div>
+                        <div id="windspeed">super fast</div>
+                    </li>
+                </a>
+                <a>
+                    <li>
+                        <div class="title">Cloudiness</div>
+                        <div id="cloudiness">70%</div>
                     </li>
                 </a>
             </ul>
             <div class="buttons">
-                <button class="btn" type="button"><a id="first-btn" href="#!">Cancel</a></button>
-                <button class="btn" id="second-btn" type="button">Invite</button>
+                <button class="btn" type="button"><a id="first-btn" href="#!">Clear</a></button>
+                <button class="btn" id="second-btn" type="button">Search</button>
             </div>
         </div>
     </div>
