--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </li>
                 </a>
                 <a>
-                    <li>
+                    <li id="description-box">
                         <div class="title">Description</div>
                         <div id="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur
                             quaerat culpa
