--- a/index.html
+++ b/index.html
@@ -13,43 +13,42 @@
     <div class="container">
         <div class="card">
             <h1>Weather</h1>
-            <input type="text" id="main" placeholder="Search your city">
+            <input type="text" id="search_input" placeholder="Search your city">
             <ul>
                 <a>
                     <li>
-                        <h3 id="city">Wrocław</h3>
+                        <div class="title">City</div>
+                        <h3 id="city"></h3>
                     </li>
                 </a>
                 <a>
                     <li>
                         <div class="title">Temperature</div>
-                        <div id="temperature">15 degrees C</div>
+                        <div id="temperature"></div>
                     </li>
                 </a>
                 <a>
                     <li>
-                        <div class="title">FeelsLike</div>
-                        <div id="feelslike">18 degrees C</div>
+                        <div class="title">Humidity</div>
+                        <div id="humidity"></div>
                     </li>
                 </a>
                 <a>
                     <li id="description-box">
                         <div class="title">Description</div>
-                        <div id="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur
-                            quaerat culpa
-                            voluptatem repellendus iure! Accusamus pariatur dolore libero autem tempora?</div>
+                        <div id="description"></div>
                     </li>
                 </a>
                 <a>
                     <li>
                         <div class="title">Wind speed</div>
-                        <div id="windspeed">super fast</div>
+                        <div id="windspeed"></div>
                     </li>
                 </a>
                 <a>
                     <li>
                         <div class="title">Cloudiness</div>
-                        <div id="cloudiness">70%</div>
+                        <div id="cloudiness"></div>
                     </li>
                 </a>
             </ul>
