--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="card">
             <h1>Weather</h1>
             <input type="text" id="search_input" placeholder="Search your city">
+            <p id="notfound"></p>
             <ul>
                 <a>
                     <li>
@@ -58,9 +59,7 @@
             </div>
         </div>
     </div>
-
     <script src="weather.js"></script>
-    <script src="storage.js"></script>
     <script src="ui.js"></script>
     <script src="app.js"></script>
 </body>
